fix(frontend): Display the end of truncated addresses

--- a/frontend/src/features/history/components/transaction-card/transaction-card.module.scss
+++ b/frontend/src/features/history/components/transaction-card/transaction-card.module.scss
@@ -21,8 +21,6 @@
   gap: 8px;
 
   button:first-child {
-    max-width: 110px;
-
     color: #f6f6f6e5;
     text-decoration: underline;
 
