--- a/frontend/src/features/swap/components/token/token.module.scss
+++ b/frontend/src/features/swap/components/token/token.module.scss
@@ -46,8 +46,6 @@
   gap: 2px;
 
   .address {
-    max-width: 64px;
-
     font-size: 11px;
     font-weight: 300;
     line-height: 1;
